# DigitalClasterRecognition

./: AnalogMeterDetector.h  CMakeLists.txt  DetectionSettings.h  MathHelpers.h  README.md  TelltalesDetector.cpp  Types.h  main.cpp
telltales/: AnalogMeterDetector.cpp  AnalogMeterDetector.h  CMakeLists.txt  DetectionSettings.h  TelltalesDetector.cpp  TelltalesDetector.h  VideoManager.cpp  VideoManager.h  main.cpp
